# NDK-Framework

./: .gitignore  LICENSE.md  README.md  generate_ndk_cpp.py  run_tests.sh
.github/workflows/: test.yml
test_configs/: big_muff_2d_config.json  big_muff_dp_config.json  common_cathode_ndk_config.json  cry_baby_config.json  cry_baby_ndk_config.json  rc_lowpass_ndk_config.json  sk_lowpass_ndk_config.json
tests/: CMakeLists.txt  freq_response_helpers.h
tests/big_muff_test/: CMakeLists.txt  main.cpp
tests/common_cathode_test/: CMakeLists.txt  main.cpp
tests/cry_baby_test/: CMakeLists.txt  main.cpp
tests/rc_lowpass_test/: CMakeLists.txt  main.cpp
tests/sk_lowpass_test/: CMakeLists.txt  main.cpp
utils/: generate_cpp.py  generate_header.py  netlist_parser.py
